# rust-actix-web-template

./: .dockerignore  Dockerfile  README.md
.docker/: group  passwd
.github/workflows/: cicd.yaml
crates/template-web/: Cargo.toml
crates/template-web/src/: main.rs  startup.rs  tracing.rs
crates/template-web/src/routes/: health.rs
rust-actix-web-template-web/: Cargo.toml
rust-actix-web-template-web/src/routes/: health.rs
tests/: template-web.rs
tests/test_server/: mod.rs
