[package]
name = "rust-actix-web-template-web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.9"
config = "0.11.0"
serde = "1.0.130"
tracing = "0.1.28"
tracing-bunyan-formatter = "0.2.6"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.24"

[dev-dependencies]
actix-rt = "2.2.0"
reqwest = { version = "0.11.4", features = ["json"] }
tokio = "1.12.0"
