[package]
name = "template-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.3"
config = "0.11.0"
serde = { version = "1.0.136", features = ["derive"] }
tracing = "0.1.30"
tracing-bunyan-formatter = "0.3.2"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }

[dev-dependencies]
actix-rt = "2.6.0"
reqwest = { version = "0.11.9", features = ["json"] }
tokio = "1.16.1"
